# jaas

./: pyproject.toml
src/app/: __init__.py
src/notebooks/: jerseys.ipynb
tests/: test_app.py
