[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Brian Dunnette <dunn0172@umn.edu>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
